--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   http: ^0.13.4
   top_snackbar_flutter: ^1.0.2
   shared_preferences: ^2.0.12
+  url_launcher: ^6.0.20
 
 dev_dependencies:
   flutter_test:
